--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-01. create calls (core)        [x]
-02. Execute calls
+01. create calls (core)                 [x]
+02. Execute calls                       [x]
 03. error handling
  * Network errors
  * url errors (should not happen)
@@ -14,5 +14,5 @@ POOL
 COMPONENTS
 ======================================
  * CORE
- * NET
+ * NET      (REPLACED BY apache.httpcomponents:httpclient:4.3.1)
  * UTIL
