added all the calls to the ext component

--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,19 @@
  * Network errors                       [x]
  * url errors (should not happen)       []
  * error code (api errors)              []
-04. json parsing with gson              []
+04. json parsing with gson              [x]
 05. hard code as help (RiotApiHelper)   []
+ * implement all services               [x]
+   + game                               [x]
+   + stats                              [x]
+   + league                             [x]
+   + summoner                           [x]
+   + team                               [x]
+   + champion                           [x]
+ * default region for all calls         []
+06. document code
+ * core
+ * ext
 
 
 POOL
