removed magic number for http status 'OK'

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 01. create calls (core)                 [x]
-02. Execute calls                       [x]
+02. Execute calls (core, apache)        [x]
 03. error handling                      []
  * Network errors                       [x]
  * url errors (should not happen)       []
