improved exception handling

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 01. create calls (core)                 [x]
 02. Execute calls (core, apache)        [x]
-03. error handling                      []
+03. error handling                      [x]
  * Network errors                       [x]
- * url errors (should not happen)       []
- * error code (api errors)              []
+ * url errors (should not happen)       [-]
+ * error code (api errors)              [x]
 04. json parsing with gson              [x]
 05. hard code as help (RiotApiHelper)   [x]
  * implement all services               [x]
